--- a/test.css
+++ b/test.css
@@ -206,18 +206,28 @@ li {
 /* Css end after the 
 header and first main section */
 
-.section2 {
-	padding-left: 20px;
-	font-size: 2vw;
-	height: 900px;
+.parall {
+  /* The image used */
+  background-image: url("https://eavent.no/wp-content/uploads/2019/05/partner-eavent.jpg");
+
+  /* Set a specific height */
+  min-height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+.parallcontent1 {
+	
+}
 
 @media screen and (max-width: 750px) {
 	div.sectionrow {
 		width: 100%;
-		
-	}
+		}
 	
 	div.rightside {
     display: none;
